--- a/disenio-interfaz/header/html-css/header-1.html
+++ b/disenio-interfaz/header/html-css/header-1.html
@@ -32,6 +32,12 @@
         </nav>
     </div>
 
+    <a href="/home/listarUsuarios">ir a listado</a>
+    <td>
+      <a href=""><button></button></a>
+      <a href=""><button></button></a>
+      <a href=""><button></button></a>
+    </td>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
