--- a/disenio-interfaz/header/html-css/header-1.html
+++ b/disenio-interfaz/header/html-css/header-1.html
@@ -1,49 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
 
-    <style>
-      div {
-        border: 1px solid black;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container-fluid">
-        <nav class="navbar bg-body-tertiary row">
-            <div class="col-2">
-                <a class="navbar-brand" href="#">Navbar</a>
-            </div>
-            <div class="col-4 text-center">
-                <p id="fecha"></p>
-            </div>
-            <div class="col-4 text-center">
-                <p id="tiempo"></p>
-            </div>
-          <div class="col-2"></div>
-        </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+</head>
+
+<body>
+  <div class="container-fluid">
+    <nav class="navbar bg-body-tertiary row">
+      <div class="col-2">
+        <a class="navbar-brand" href="#">Navbar</a>
+      </div>
+      <div class="col-4 text-center pt-3">
+        <p id="fecha"></p>
+      </div>
+      <div class="col-4 text-center pt-3">
+        <p id="tiempo"></p>
+      </div>
+
+      <!--Aca se encuentra el usuario con el dropdow-->
+      <div class="col-2">
+        <div class="btn-group">
+          <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            Usuario
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Perfil</a></li>
+            <li><a class="dropdown-item" href="#">Lista Usuarios</a></li>
+            <li><a class="dropdown-item" href="#">Prox. funcionalidad</a></li>
+            <li>
+              <hr class="dropdown-divider" />
+            </li>
+            <li class="d-grid gap-2">
+              <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#ModalCerrarSesion">
+                Cerrar Sesion
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+
+  <!--MODAL PARA CERRAR SESION-->
+  <!-- Modal -->
+  <div class="modal fade" id="ModalCerrarSesion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Atencion Cerrando Sesion</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Esta usted seguro que desea cerrar sesion? <br>
+          Presiones Continuar para cerrar sesion u Cancelar para seguir navegando
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            Cancelar
+          </button>
+          <a href="" class="btn btn-danger">Cerrar Sesion</a>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <a href="/home/listarUsuarios">ir a listado</a>
-    <td>
-      <a href=""><button></button></a>
-      <a href=""><button></button></a>
-      <a href=""><button></button></a>
-    </td>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-    <script src="./fecha-hora.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+  <script src="./fecha-hora.js"></script>
+</body>
+
 </html>
