--- a/disenio-interfaz/listas/html-css/listas.html
+++ b/disenio-interfaz/listas/html-css/listas.html
@@ -38,6 +38,7 @@
     <div class="container">
         <div class="row">
             <h2 class="text-center">Lista de Usuarios</h2>
+            <a class="btn btn-primary" href="#"> Nuevo Usuario</a>
         </div>
         <div class="row">
             <table class="table table-striped table-hover tabla-lista">
