--- a/disenio-interfaz/login/login.html
+++ b/disenio-interfaz/login/login.html
@@ -1,4 +1,3 @@
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +13,6 @@
 
     </style>
 </head>
-
 <body>
 
     <div class="container mt-5">
@@ -24,7 +22,7 @@
         </div>
 
         <div class="row login-body mt-5">
-            <span class="border border-primary-subtle border-3 rounded-4 px-5">
+            <span class="border border-success-subtle border-3 px-5">
 
                 <form name="j_security_form" method="post" action="j_security_check">
                     <div class="row mt-4 justify-content-end">
@@ -50,7 +48,8 @@
                             <button class="btn btn-warning btn-lg" type="submit">Continuar</button>
                     </div>
                 </form>
-                
+
+
             </span>
 
         </div>
@@ -59,3 +58,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
+
